[project]
name = "esphome-config"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "esphome>=2025.8",
]


[tool.ruff]
required-version = ">=0.5.0"
target-version = "py311"
exclude = ['generated']

[tool.ruff.lint]
select = [
  "E",    # pycodestyle
  "F",    # pyflakes/autoflake
  "FURB", # refurb
  "I",    # isort
  "PERF", # performance
  "PL",   # pylint
  "SIM",  # flake8-simplify
  "RET",  # flake8-ret
  "UP",   # pyupgrade
]

ignore = [
  "E501", # line too long
  "PLC0415", # `import` should be at the top-level of a file
  "PLR0911", # Too many return statements ({returns} > {max_returns})
  "PLR0912", # Too many branches ({branches} > {max_branches})
  "PLR0913", # Too many arguments to function call ({c_args} > {max_args})
  "PLR0915", # Too many statements ({statements} > {max_statements})
  "PLW1641", # Object does not implement `__hash__` method
  "PLR2004", # Magic value used in comparison, consider replacing {value} with a constant variable
  "PLW2901", # Outer {outer_kind} variable {name} overwritten by inner {inner_kind} target
  "UP038", # https://github.com/astral-sh/ruff/issues/7871 https://github.com/astral-sh/ruff/pull/16681
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = [
  "esphome",
]
combine-as-imports = true
split-on-trailing-comma = false
